--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@ document.write('<p>' + greet + '</p>');
 								<a href="http://www.4chan.org/">4chan</a>
 							</div>
 										<ul> <!-- This is the part that makes it a drop down. Add this code between the <li> </li> tags of what you want to be dropped down -->
+											<li><a href="https://boards.4chan.org/jp/djt">djt</a></li>
+											<li><a href="https://boards.4chan.org/g/bst/">/bst/</a></li>
+											<li><a href="https://chinkshit.xyz">/csg/</a></li>
+											<li><a href="https://boards.4chan.org/gif/">/gif//</a></li>
 											<li><a href="https://boards.4chan.org/a/">/a/</a></li>
-											<li><a href="https://boards.4chan.org/g/">/g/</a></li>
-											<li><a href="https://boards.4chan.org/fa/">/fa/</a></li>
+											<li><a href="https://boards.4chan.org/wg/">/wg/</a></li>
+											<li><a href="https://boards.4chan.org/w/">/w/</a></li>
 										</ul>
 						</li>
 						<li>
@@ -69,7 +73,7 @@ document.write('<p>' + greet + '</p>');
 						</li>
 						<li>
 							<div>
-								<a href="http://www.pomf.se/">pomf</a>
+								<a href="http://www.amazon.com/">amazon</a>
 							</div>
 						</li>
 						<li>
@@ -99,8 +103,7 @@ document.write('<p>' + greet + '</p>');
 				<li><a href="http://nagomi.ne.jp/">nagomi</a></li>
 				<li><a href="http://www.liveleak.com/">liveleak</a></li>
 				<li><a href="#">bandcamp</a></li>
-				<li><a href="http://www.pixiv.net/mypage.php/">pixiv</a></li>
-				<li><a href="http://exhentai.org/">ex</a></li>
+				<li><a href="www.anki.com">anki</a></li>
 			</ul>
 		
 		</nav>
