--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script>
 
 
-var pictures = ['images/mascot1.png', 'images/mascot2.png', 'images/mascot3.png', 'images/mascot4.png', 'images/mascot5.png', 'images/mascot6.png', 'images/mascot7.png', 'images/mascot8.png', 'images/mascot9.png', 'images/mascot10.png', 'images/mascot11.png', 'images/mascot12.png', 'images/mascot13.png',　'images/mascot14.png', 'images/mascot15.png', 'images/mascot16.png', 'images/mascot17.png', 'images/mascot18.png', 'images/mascot19.png', 'images/mascot20.png',];
+var pictures = ['images/mascot1.png', 'images/mascot2.png', 'images/mascot3.png', 'images/mascot4.png', 'images/mascot5.png', 'images/mascot6.png', 'images/mascot7.png', 'images/mascot8.png', 'images/mascot9.png', 'images/mascot10.png', 'images/mascot11.png', 'images/mascot12.png', 'images/mascot13.png',　'images/mascot14.png', 'images/mascot15.png', 'images/mascot16.png', 'images/mascot17.png', 'images/mascot18.png', 'images/mascot19.png', 'images/mascot20.png','images/mascot21.png',];
 
 var picture = pictures[Math.floor(Math.random() * pictures.length)];
 
@@ -58,7 +58,7 @@ document.write('<p>' + greet + '</p>');
 							</div>
 										<ul> <!-- This is the part that makes it a drop down. Add this code between the <li> </li> tags of what you want to be dropped down -->
 											<li><a href="https://boards.4chan.org/jp/djt">djt</a></li>
-											<li><a href="https://boards.4chan.org/g/bst/">/bst/</a></li>
+											<li><a href="https://boards.4chan.org/g/bst">/bst/</a></li>
 											<li><a href="https://chinkshit.xyz">/csg/</a></li>
 											<li><a href="https://boards.4chan.org/gif/">/gif//</a></li>
 											<li><a href="https://boards.4chan.org/a/">/a/</a></li>
@@ -78,7 +78,7 @@ document.write('<p>' + greet + '</p>');
 						</li>
 						<li>
 							<div>
-								<a href="http://www.soundcloud.com/">soundcloud</a>
+								<a href="pushbullet.com">pushbullet</a>
 							</div>
 								<ul>
 									<li><a href="#">likes</a></li>
