--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ document.write('<p>' + greet + '</p>');
 						</li>
 						<li>
 							<div>
-								<a href="pushbullet.com">pushbullet</a>
+								<a href="https://www.pushbullet.com">pushbullet</a>
 							</div>
 								<ul>
 									<li><a href="#">likes</a></li>
@@ -101,7 +101,7 @@ document.write('<p>' + greet + '</p>');
 				<li><a href="http://jpopsuki.eu/index.php">jpopsuki</a></li>
 				<li><a href="http://www.realkana.com/">realkana</a></li>
 				<li><a href="http://nagomi.ne.jp/">nagomi</a></li>
-				<li><a href="http://www.liveleak.com/">liveleak</a></li>
+				<li><a href="https://nyaa.pantsu.cat/">nyaa pantsu</a></li>
 				<li><a href="#">bandcamp</a></li>
 				<li><a href="www.anki.com">anki</a></li>
 			</ul>
@@ -110,7 +110,7 @@ document.write('<p>' + greet + '</p>');
 		</div>
 				
 		<!-- This is the searchbox. -->
-		<form id="searchfield" method="get" action="http://www.google.com/search"> <input type="text" name="q" size="108" maxlength="255" value="" class="textinput" autofocus="true" autocomplete="off" placeholder="search" STYLE= "background-color: #eaeaea; font-family: '04B03' " /> <input type="submit" value=">" class="submitinput"/>
+		<form id="searchfield" method="get" action="http://www.google.com/search"> <input type="text" name="q" size="108" maxlength="255" value="" class="textinput" autofocus="true" autocomplete="on" placeholder="search" STYLE= "background-color: #eaeaea; font-family: '04B03' " /> <input type="submit" value=">" class="submitinput"/>
 
 		
 	</body>
