--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ document.write('<p>' + greet + '</p>');
 								<a href="http://www.4chan.org/">4chan</a>
 							</div>
 										<ul> <!-- This is the part that makes it a drop down. Add this code between the <li> </li> tags of what you want to be dropped down -->
-											<li><a href="https://boards.4chan.org/jp/djt">djt</a></li>
+											<li><a href="https://boards.4chan.org/jp/djt">/djt/</a></li>
 											<li><a href="https://boards.4chan.org/g/bst">/bst/</a></li>
 											<li><a href="https://chinkshit.xyz">/csg/</a></li>
 											<li><a href="https://boards.4chan.org/gif/">/gif//</a></li>
