--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@ document.write('<img src="' + picture + '"/>');
 {
 var greet;
 
-  if (new Date().getHours() < 12) {
+  if (var new Date().getHours() < 12) {
         greet = "おはよう！";
 		}
-		else if (new Date().getHours() < 16) {
+		else if (var new Date().getHours() < 16) {
 			greet = "こんにちは！";
 			}
-			else　if (new Date().getHours() < 18) {
+			else　if (var new Date().getHours() < 18) {
 				greet = "こんばんは！";
 				}
 				else  {
