--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@ document.write('<img src="' + picture + '"/>');
 {
 var greet;
 
-  if (var new Date().getHours() < 12) {
-        greet = "おはよう！";
+  if (new Date().getHours() < 12) {
+        greet = "おはよう！1";
 		}
-		else if (var new Date().getHours() < 16) {
+		else if (new Date().getHours() < 16) {
 			greet = "こんにちは！";
 			}
-			else　if (var new Date().getHours() < 18) {
+			else　if (new Date().getHours() < 18) {
 				greet = "こんばんは！";
 				}
 				else  {
-					greet = "おやすみ！";
+					greet = "おやすみ！2";
 					}
 					
 document.write('<p>' + greet + '</p>');
@@ -110,8 +110,19 @@ document.write('<p>' + greet + '</p>');
 		</div>
 				
 		<!-- This is the searchbox. -->
-		<form id="searchfield" method="get" action="http://www.google.com/search"> <input type="text" name="q" size="108" maxlength="255" value="" class="textinput" autofocus="true" autocomplete="on" placeholder="search" STYLE= "background-color: #eaeaea; font-family: '04B03' " /> <input type="submit" value=">" class="submitinput"/>
-
+		<!--<form id="searchfield" method="get" action="http://www.google.com/search"> <input type="text" name="q" size="108" maxlength="255" value="" class="textinput" autofocus="true" autocomplete="on" placeholder="search" STYLE= "background-color: #eaeaea; font-family: '04B03' " /> <input type="submit" value=">" class="submitinput"/>-->
+<script>
+  (function() {
+    var cx = '017643444788069204610:4gvhea_mvga';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//www.google.com/cse/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
 		
 	</body>
 
