--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@ document.write('<p>' + greet + '</p>');
 				
 		<!-- This is the searchbox. -->
 		<!--<form id="searchfield" method="get" action="http://www.google.com/search"> <input type="text" name="q" size="108" maxlength="255" value="" class="textinput" autofocus="true" autocomplete="on" placeholder="search" STYLE= "background-color: #eaeaea; font-family: '04B03' " /> <input type="submit" value=">" class="submitinput"/>-->
+		<gcse:search enableAutoComplete="true"></gcse:search>
+
 <script>
   (function() {
     var cx = '017643444788069204610:4gvhea_mvga';
