--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@ document.write('<img src="' + picture + '"/>');
 <!--
 {
 var greet;
+var time = new Date();
 
-  if (new Date().getHours() < 12) {
+  if (time.getHours() < 12) {
         greet = "おはよう！1";
 		}
-		else if (new Date().getHours() < 16) {
+		else if (time.getHours() < 16) {
 			greet = "こんにちは！";
 			}
-			else　if (new Date().getHours() < 18) {
+			else　if (time.getHours() < 18) {
 				greet = "こんばんは！";
 				}
 				else  {
