--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ var time = new Date();
 				greet = "こんばんは！";
 				}
 				else  {
-					greet = "おやすみ！2";
+					greet = "おやすみ！";
 					}
 					
 document.write('<p>' + greet + '</p>');
@@ -61,7 +61,7 @@ document.write('<p>' + greet + '</p>');
 											<li><a href="https://boards.4chan.org/jp/djt">/djt/</a></li>
 											<li><a href="https://boards.4chan.org/g/bst">/bst/</a></li>
 											<li><a href="https://chinkshit.xyz">/csg/</a></li>
-											<li><a href="https://boards.4chan.org/gif/">/gif//</a></li>
+											<li><a href="https://boards.4chan.org/gif/">/gif/</a></li>
 											<li><a href="https://boards.4chan.org/a/">/a/</a></li>
 											<li><a href="https://boards.4chan.org/wg/">/wg/</a></li>
 											<li><a href="https://boards.4chan.org/w/">/w/</a></li>
@@ -82,7 +82,7 @@ document.write('<p>' + greet + '</p>');
 								<a href="https://www.pushbullet.com">pushbullet</a>
 							</div>
 								<ul>
-									<li><a href="#">likes</a></li>
+									<!--<li><a href="#">likes</a></li>-->
 								</ul>
 						</li>	
 			</ul>
@@ -105,13 +105,16 @@ document.write('<p>' + greet + '</p>');
 				<li><a href="https://nyaa.pantsu.cat/">nyaa pantsu</a></li>
 				<li><a href="#">bandcamp</a></li>
 				<li><a href="www.anki.com">anki</a></li>
+				<li><a href="www.facebook.com">facebook</a></li>
+				<li><a href="www.google.com/gmail">gmail</a></li>
+				<li><a href="drive.google.com/drive">drive</a></li>
 			</ul>
 		
 		</nav>
 		</div>
 				
 		<!-- This is the searchbox. -->
-		<!--<form id="searchfield" method="get" action="http://www.google.com/search"> <input type="text" name="q" size="108" maxlength="255" value="" class="textinput" autofocus="true" autocomplete="on" placeholder="search" STYLE= "background-color: #eaeaea; font-family: '04B03' " /> <input type="submit" value=">" class="submitinput"/>-->
+		<form id="searchfield" method="get" action="http://www.google.com/search"> <input type="text" name="q" size="108" maxlength="255" value="" class="textinput" autofocus="true" autocomplete="on" placeholder="search" STYLE= "background-color: #eaeaea; font-family: '04B03' " /> <input type="submit" value=">" class="submitinput"/>
 		
 	</body>
 
