--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@ document.write('<p>' + greet + '</p>');
 				<li><a href="http://nagomi.ne.jp/">nagomi</a></li>
 				<li><a href="https://nyaa.pantsu.cat/">nyaa pantsu</a></li>
 				<li><a href="#">bandcamp</a></li>
-				<li><a href="www.anki.com">anki</a></li>
-				<li><a href="www.facebook.com">facebook</a></li>
-				<li><a href="www.google.com/gmail">gmail</a></li>
-				<li><a href="drive.google.com/drive">drive</a></li>
+				<li><a href="https:/www.anki.com">anki</a></li>
+				<li><a href="https:/www.facebook.com">facebook</a></li>
+				<li><a href="https://www.google.com/gmail">gmail</a></li>
+				<li><a href="https://www.drive.google.com/drive">drive</a></li>
 			</ul>
 		
 		</nav>
@@ -115,7 +115,11 @@ document.write('<p>' + greet + '</p>');
 				
 		<!-- This is the searchbox. -->
 		<form id="searchfield" method="get" action="http://www.google.com/search"> <input type="text" name="q" size="108" maxlength="255" value="" class="textinput" autofocus="true" autocomplete="on" placeholder="search" STYLE= "background-color: #eaeaea; font-family: '04B03' " /> <input type="submit" value=">" class="submitinput"/>
-		
+		<form action="http://www.google.com/search" class="searchform" method="get" name="searchform" target="_blank">
+<input name="sitesearch" type="hidden" value="www.sanwebcorner.com">
+<input autocomplete="on" class="form-controls search" name="q" placeholder="Search in sanwebcorner.com" required="required"  type="text">
+<button class="button" type="submit">Search</button>
+</form>
 	</body>
 
 </html>
