--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ document.write('<p>' + greet + '</p>');
 		<!-- This is the searchbox. -->
 		<form id="searchfield" method="get" action="http://www.google.com/search"> <input type="text" name="q" size="108" maxlength="255" value="" class="textinput" autofocus="true" autocomplete="on" placeholder="search" STYLE= "background-color: #eaeaea; font-family: '04B03' " /> <input type="submit" value=">" class="submitinput"/>
 		<form action="http://www.google.com/search" class="searchform" method="get" name="searchform" target="_blank">
-<input name="sitesearch" type="hidden" value="www.sanwebcorner.com">
-<input autocomplete="on" class="form-controls search" name="q" placeholder="Search in sanwebcorner.com" required="required"  type="text">
+<input name="sitesearch" type="hidden">
+<input autocomplete="on" class="form-controls search" name="q" required="required"  type="text">
 <button class="button" type="submit">Search</button>
 </form>
 	</body>
