--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@ document.write('<p>' + greet + '</p>');
 						</li>
 						<li>
 							<div>
+								<a href="http://www.djtguide.neocities.org">djtguide</a>
+							</div>
+						</li>
+						<li>
+							<div>
 								<a href="https://www.pushbullet.com">pushbullet</a>
 							</div>
 								<ul>
