--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ document.write('<p>' + greet + '</p>');
 						</li>
 						<li>
 							<div>
-								<a href="http://www.djtguide.neocities.org">djtguide</a>
+								<a href="https://www.djtguide.neocities.org">djtguide</a>
 							</div>
 						</li>
 						<li>
