--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ document.write('<p>' + greet + '</p>');
 						</li>
 						<li>
 							<div>
-								<a href="https://www.djtguide.neocities.org">djtguide</a>
+								<a href="www.djtguide.neocities.org">djtguide</a>
 							</div>
 						</li>
 						<li>
@@ -126,6 +126,28 @@ document.write('<p>' + greet + '</p>');
 <input autocomplete="on" class="form-controls search" name="q" required="required"  type="text">
 <button class="button" type="submit">Search</button>
 </form>-->
+var montharray=new Array("January","February","March","April","May","June","July","August","September","October","November","December")
+var serverdate=new Date(currenttime)
+
+function padlength(what){
+var output=(what.toString().length==1)? "0"+what : what
+return output
+}
+
+function displaytime(){
+serverdate.setSeconds(serverdate.getSeconds()+1)
+var datestring=montharray[serverdate.getMonth()]+" "+padlength(serverdate.getDate())+", "+serverdate.getFullYear()
+var timestring=padlength(serverdate.getHours())+":"+padlength(serverdate.getMinutes())+":"+padlength(serverdate.getSeconds())
+document.getElementById("servertime").innerHTML=datestring+" "+timestring
+}
+
+window.onload=function(){
+setInterval("displaytime()", 1000)
+}
+
+</script>
+
+<p><b>Current Server Time:</b> <span id="servertime"></span></p>
 	</body>
 
 </html>
