--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@ document.write('<p>' + greet + '</p>');
 <input autocomplete="on" class="form-controls search" name="q" required="required"  type="text">
 <button class="button" type="submit">Search</button>
 </form>-->
+<script>
 var montharray=new Array("January","February","March","April","May","June","July","August","September","October","November","December")
 var serverdate=new Date(currenttime)
 
