--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ document.write('<p>' + greet + '</p>');
 				<li><a href="https://www.google.com/gmail">gmail</a></li>
 				<li><a href="https://www.drive.google.com/drive">drive</a></li>
 				<li><a href="https://myut.utoledo.edu">myut</a></li>
+				<li><a href="https://www.crunchyroll.com">crunchyroll</a></li>
 			</ul>
 		
 		</nav>
