--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ document.write('<p>' + greet + '</p>');
 						</li>
 						<li>
 							<div>
-								<a href="https://www.djtguide.neocities.org">djtguide</a>
+								<a href="https://djtguide.neocities.org/">djtguide</a>
 							</div>
 						</li>
 						<li>
@@ -114,7 +114,7 @@ document.write('<p>' + greet + '</p>');
 				<li><a href="https://www.google.com/gmail">gmail</a></li>
 				<li><a href="https://www.drive.google.com/drive">drive</a></li>
 				<li><a href="https://myut.utoledo.edu">myut</a></li>
-				<li><a href="https://www.crunchyroll.com">crunchyroll</a></li>
+				<li><a href="https://www.crunchyroll">crunchyroll</a></li>
 			</ul>
 		
 		</nav>
